--- a/jf.html
+++ b/jf.html
@@ -66,7 +66,6 @@
       div {
         font-size:14pt;
         margin:10px;
-        //font-style:italic;
       }
       .sub {
         font-size:12pt;
@@ -92,15 +91,13 @@
         <script>
           SG(freeze, document.getElementById('freeze'), 
             { 'fontSize':11, 
-              'fontFamily':'Cabin,Helvetica,Arial,sans-serif',
+              'fontFamily':'sans-serif',
               'slopeWidth':180, 
               'gutterWidth':6,
               'lineSize':1, 
               'lineOpacity':0.3,
               'lineColor':'#234', 
               'fontColor':'#234',
-              'waitFont':'Cabin,"Courier New"',
-             // 'resize':true,
               'height':900,
               'textWidth':100,
               'sortVals':'up',
